--- a/client/views/Confirm.html
+++ b/client/views/Confirm.html
@@ -1,5 +1,7 @@
 <div class="container" style="overflow:hidden;">
   <button class="btn btn-info btn-block" style="width: 63%;">CONFIRMATION PAGE</button>
+  <a href="/" class="btn btn-success" ng-click="LogoutUser()" style="margin-top: 10px;margin-left: 49%;">LogOut</a>
+
 
 <div class="table-responsive">
   <table class="table" style="color:white;background-color: TRANSPARENT;width: 63%;">
