--- a/client/views/Login.html
+++ b/client/views/Login.html
@@ -1,440 +1,70 @@
-<style>
-.main-login{
- 	background-color: #fff;
-
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-
-}
-
-.main-center{
- 	margin-top: 30px;
- 	margin: 0 auto;
- 	max-width: 330px;
-    padding: 10px 31px;
-
-}
-
-.login-register{
-	font-size: 11px;
-	text-align: center;
-}
-.form-container div, .form-container  span{
-    font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
-}
-
-.form-container ::-webkit-input-placeholder {
-    color:    #999;
-}
-
-.form-container :-moz-placeholder {
-   color:    #999;
-   opacity:  1;
-}
-
-.form-container ::-moz-placeholder {
-   color:    #999;
-   opacity:  1;
-}
-
-.form-container :-ms-input-placeholder {
-   color:    #999;
-}
-
-.form-container :placeholder-shown {
-  color:  #999;
-}
-
-.oauth-buttons {
-    text-align:center;
-}
-.row {
-	text-align:center;
-}
-
-.form-container .create-account{
-	color:inherit;
-	margin-top: 15px;
-    display: inline-block;
-	cursor:pointer;
-	text-decoration:none;
-}
-
-.oauth-buttons .fa{
-	cursor:pointer;
-	margin-top:10px;
-	color:inherit;
-	width:30px;
-	height:30px;
-	text-align:center;
-	line-height:30px;
-	margin:5px;
-	margin-top:15px;
-}
-.oauth-buttons .fa:hover{
-	color:white;
-}
-.oauth-buttons .fa-google-plus:hover{
-	background: #dd4b39;
-}
- .oauth-buttons .fa-facebook:hover{
-	background:	#8b9dc3;
-}
-
-.oauth-buttons .fa-linkedin:hover{
-	background:	#0077b5;
-}
-
-.oauth-buttons .fa-twitter:hover{
-	background:	#55acee;
-}
-
-.form-container .req-input .input-status {
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    float: left;
-}
-.form-container .input-status::before{
-	content: " ";
-	height:20px;
-	width:20px;
-	position:absolute;
-	top:10px;
-	left:10px;
-	color:white;
-	border-radius:50%;
-	background:white;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
-
-}
-
-.form-container .input-status::after{
-	content: " ";
-	height:10px;
-	width:10px;
-	position:absolute;
-	top:15px;
-	left:15px;
-	color:white;
-	border-radius:50%;
-	background:#00BCD4;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
-}
-
-.form-container .req-input{
-	width:100%;
-    float:left;
-	position:relative;
-	background:#00BCD4;
-	height:40px;
-	display:inline-block;
-	border-radius:0px;
-	margin:5px 0px;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
-}
+<!-- <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
 
 
-.form-container .input-container{
-	padding:0px 20px;
-}
+   <div class="container">
+   <div class='col-md-5'>
+       <div class="form-group">
+           <div class='input-group date' id='datetimepicker6'>
+               <input type='text' class="form-control" />
+               <span class="input-group-addon">
+                   <span class="glyphicon glyphicon-calendar"></span>
+               </span>
+           </div>
+       </div>
+   </div>
 
- .form-container .row-input{
-	padding:0px 5px;
-}
-
-
-
-.form-container {
-	margin:20px;
-	padding:20px;
-	border-radius:0px;
-	background:#B3E5FC;
-	color:#00838F;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
-}
-
-.form-container .form-title{
-	font-size:25px;
-	color:inherit;
-	text-align:center;
-	margin-bottom:10px;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
-}
+</div> -->
 
 
-.form-container .btn.submit-form{
-	margin-top:15px;
-	padding:12px;
-	background:#00BCD4;
-	color:white;
-	border-radius:0px;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
-}
+<!-- <div class="row">
+                       <div class="col-md-2">
+                           <div class="input-group date" id="dp3" data-date="20-01-2015" data-datepicker-format="DD-MM-YYYY">
+                               <input class="form-control" type="text" size="16" value="20-01-2015" readonly="">
+                               <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                           </div>
+                       </div>
+                   </div>
+               </div> -->
 
-
-.form-container input[type=text], .form-container input[type=password], .form-container input[type=email],input[type=tel], form-container select{
-	width:calc(100% - 50px);
-	float:left;
-	border-radius:0px;
-	border:0px solid #ddd;
-	padding:0px 9px;
-	height:40px;
-	line-height:40px;
-	color:#777;
-	background:#fff;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
-}
-
-
-
-.wrap
-{
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    position: absolute;
-    top: 155px;
-    left: -252px;
-    z-index: 99;
-}
-
-p.form-title
-{
-    font-family: 'Open Sans' , sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    text-align: center;
-    color: #FFFFFF;
-    margin-top: 5%;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-}
-
-form
-{
-    width: 250px;
-    margin: 0 auto;
-}
-
-form.login input[type="text"], form.login input[type="password"]
-{
-    width: 100%;
-    margin: 0;
-    padding: 5px 10px;
-    background: 0;
-    border: 0;
-    border-bottom: 1px solid #FFFFFF;
-    outline: 0;
-    font-style: italic;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    margin-bottom: 5px;
-    color: #FFFFFF;
-    outline: 0;
-}
-
-form.login input[type="submit"]
-{
-    width: 100%;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 500;
-    margin-top: 16px;
-    outline: 0;
-    cursor: pointer;
-    letter-spacing: 1px;
-}
-
-form.login input[type="submit"]:hover
-{
-    transition: background-color 0.5s ease;
-}
-
-form.login .remember-forgot
-{
-    float: left;
-    width: 100%;
-    margin: 10px 0 0 0;
-}
-form.login .forgot-pass-content
-{
-    min-height: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-form.login label, form.login a
-{
-    font-size: 12px;
-    font-weight: 400;
-    color: #FFFFFF;
-}
-
-form.login a
-{
-    transition: color 0.5s ease;
-}
-
-form.login a:hover
-{
-    color: #2ecc71;
-}
-/*.button {
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 0px -19px;
-    cursor: pointer;
-}*/
-/*.button5 {border-radius: 53%;}*/
-
-/*body{
-  style="background-image: url("img/roll2.jpg");
-    background-size:cover;"
-
-}*/
-
-</style>
-
-
-
-
-
-</div>
+               <!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> -->
+<!--
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
+</script> -->
 <div class="container">
 <div class="row">
-  <a class="btn btn-success" ng-click="LogoutUser()" style="margin-top: 20px">LogOut</a>
+  <div class='col-md-12'>
+     <div class='col-md-1'></div>
+   <div class='col-md-5' style="    margin-left: -13%;">
+<div id="myMap" style="width: 600px; height: 600px">
+</div></div>
+  <div class='col-md-5' style="    margin-left: 16%;">
+  <button class="btn btn-primary" ng-click="now()">Ride Now</button>
+  <button class="btn btn-primary" ng-click="ridelater()">Ride Later</button>
+  <div ng-show="ridenow" style="color:white">
 
-    <div class="col-md-12">
+    Your Location : <input id="address" class="form-control" type="text" style="width:600px;"/><br/>
+    Destination: <input class="autocomplete form-control" id="ac1"  type="text" required></input>
+    Choose Cab Type :<select class="form-control" required>
+<option class="form-control" ng-repeat="car in carlist" ng-value="car.carType">{{car.carType}}</option>
+           </select>
+Choose Trip Type:<p></p>
+               <input type="radio"  ng-model="tripType" ng-change="get()" Name="triptype"  value="Round Trip">Round Trip
 
-        <div class="wrap">
-            <p class="form-title">
-                Sign In</p>
-            <form class="login">
-            <input type="text" placeholder="Email" ng-model="User.Email" />
-            <input type="password" ng-model="User.Password" placeholder="Password" />
-            <input type="submit" ng-click="LoginUser()" value="Sign In" class="btn btn-success btn-sm" />
-            <input type="submit" data-toggle="modal" data-target="#myModalRegister" value="Register" class="btn btn-info btn-sm" />
-                </div>
-            </div>
-
-            </form>
-        </div>
-        <div class="modal fade" id="myModalRegister" role="dialog">
-<div class="modal-dialog" style="margin-left: 40%; width: 25%;padding:0px">
-
-<!-- Modal content-->
-<div class="modal-content">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal">&times;</button>
-    <h4 class="modal-title">Register</h4>
+       <input type="radio"  ng-model="tripType" ng-change="get()" Name="triptype"  value="One Way">One Way
   </div>
-  <div class="modal-body"style="padding:0px">
-    <div class="row main">
-
-      <div class="main-login main-center">
-        <form class="form-horizontal" method="post" action="#">
-
-          <div class="form-group">
-            <label for="name" class="cols-sm-2 control-label">First Name</label>
-            <div class="cols-sm-10">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                <input type="text" class="form-control" ng-model="User.FirstName" name="name" id="name"  placeholder="Enter your Name"/>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="name" class="cols-sm-2 control-label">Last Name</label>
-            <div class="cols-sm-10">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                <input type="text" class="form-control" ng-model="User.LastName" name="name" id="name"  placeholder="Enter your Name"/>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label for="email" class="cols-sm-2 control-label">Your Email</label>
-            <div class="cols-sm-10">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                <input type="text" class="form-control" ng-model="User.Email" name="email" id="email"  placeholder="Enter your Email"/>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label for="mobile" class="cols-sm-2 control-label">Mobile No</label>
-            <div class="cols-sm-10">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-                <input type="text" class="form-control" ng-model="User.MobileNumber" name="username" id="mobile"  placeholder="Enter your Username"/>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label for="password" class="cols-sm-2 control-label">Password</label>
-            <div class="cols-sm-10">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                <input type="password" class="form-control" ng-model="User.Password" name="password" id="password"  placeholder="Enter your Password"/>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
-            <div class="cols-sm-10">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                <input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password"/>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group ">
-            <button href="#/Login" type="button" ng-click="RegisterUser()" class="btn btn-primary btn-lg btn-block login-button">Register</button>
-          </div>
-
-        </form>
-      </div>
-    </div>
   </div>
-</div>
+     <div class='col-md-1'></div>
+     </div>
+     </div>
+     </div>
 
-</div>
-</div>
-
-    </div></div>
+<!--
+<div id="myMap"></div>
+<div id="address" ></div>
+<div  id="latitude" ></div>
+<div id="longitude" ></div> -->
