--- a/client/views/assigning.html
+++ b/client/views/assigning.html
@@ -1,3 +1,7 @@
+<a href="/" class="btn btn-success" ng-click="LogoutUser()" style="margin-top: 10px;margin-left:22%;">LogOut</a>
+
+
+
 <div style="color:white">
 <b>CustomerBookingID</b>{{asDriver.customerId}}<br>
 <b>Source</b>{{asDriver.sourcePlace}}<br>
